kubernetes-istio-scripts/kubernetes/reloader/devops-reloader-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  devops
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: devops-reloader-deployment-blue
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: devops-reloader-blue
  template:
    metadata:
      labels:
        app.kubernetes.io/name: devops-reloader-blue
      annotations:
        # For other configuration, see https://github.com/stakater/Reloader
        reloader.stakater.com/auto: "true"
    spec:
      containers:
      - name: devops-blue
        image: timpamungkas/devops-blue:1.0.0
        resources:
          requests:
            cpu: "0.02"
            memory: 32Mi
          limits:
            cpu: "0.3"
            memory: 384Mi
        ports:
        - name:  http
          containerPort: 8111
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/blue/actuator/health/readiness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/blue/actuator/health/liveness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 1

---

apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-blue-clusterip
  labels:
    app.kubernetes.io/name: devops-reloader-blue
spec:
  selector:
    app.kubernetes.io/name: devops-reloader-blue
  ports:
  - port: 8111
    name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: devops
  name: ingress-devops-reloader-nginx-blue
  labels:
    app.kubernetes.io/name: ingress-devops-reloader-nginx-blue
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /devops/blue
        pathType: Prefix
        backend:
          service:
            name: devops-blue-clusterip
            port:
              number: 8111
